Resolved the bug related date shifting into second row

--- a/src/pages/createFeeds/createFeeds.scss
+++ b/src/pages/createFeeds/createFeeds.scss
@@ -380,7 +380,7 @@ page-createFeeds {
     font-size: 2em !important;
   }
   .broadcast_date_text span {
-    font-size: 1.2em;
+    font-size: 1em;
   }
   .grid-img ion-col {
     padding: 0px 5px;
